--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-
+<body style="background-color:powderblue;">
     <div class="container">
         <h2>BMI Calculator</h2>
         
